fix: fixed statistics being scrolled to bottom and gap between stats totals

--- a/assets/style.css
+++ b/assets/style.css
@@ -2952,6 +2952,7 @@ input:-webkit-autofill:active{
 	}
 	#statisticsMenu #statsTotals {
 		height: calc(6vw + 1rem);
+		gap: 1.5vw;
 	}
 	#statisticsMenu #statsTotals .stats-totals-element {
 		height: calc(6vw + 1rem);
